src/scss/style.css
/* ... */
 .menu.sideactive {
     transform: translateX(0%);
 }

 .godownout {
     margin-top: 86%;
 }

 .menu .menu__content {
     text-align: center;
     width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
     z-index: 99;
     transition: all 0.2s;
     align-items: center;
     transform: translateX(5%);
 }

 .menu .menu__content ul {
     padding-top: 50px;
     display: flex;
     flex-direction: column;
 }

 .menu .menu__content ul li {
     padding-bottom: 20px;
 }

 .menu .menu__content ul li a {
     font-style: normal;
     font-weight: 400;
     text-decoration: none;
     font-size: 14px;
     line-height: 18px;
     color: #fff;
 }

.afewrweq {
    max-width: 760px;
    max-height: 400px;
}

.a-logo {
    display: flex;
    align-items: center;
}

button {
    cursor: pointer;
}

.logo {
    height: 35px;
}

.header__chat-link {
    position: relative;
}

.chat-message-counter {
    font-size: 10px;
    position: absolute;
    top: -5px;
    width: 16px;
    height: 16px;
    /* border: 2px solid #fff; */
    border-radius: 8px;
    text-align: center;
    background: #D9573B;
    left: 16px;

    display: flex;
    align-items: center;
    justify-content: center;
}

.img-content > img {
    width: 90px;
    height: 90px;
    object-fit: cover;
}

.service-detail-modal__price {
    margin-top: 6px;
    margin-bottom: 18px;
}

.service-detail-modal-price__final {
    margin-top: 6px;
}

.comment {
    margin-bottom: 60px;
}

#footer .container {
    justify-content: flex-start!important;
}

#footer .contfff {
    margin-left: 180px;
}

.main-optifdsaons {
    max-width: 940px;
}

.action-buttons {
    margin-top: 10px;
    display: flex;
    gap: 10px
}

.input-wrap .checkbox {
    display: flex;
    align-items: center;
    width: 100%;
}

.input-wrap .checkbox input {
    width: auto;
    height: auto;
    width: 16px;
    height: 16px;
    margin-right: 5px;
}

.master-settings-pics__list {
    margin-top: 20px;
    display: flex;
    flex-wrap: wrap;
    gap: 20px 2%;
}

.master-settings-pics__item {
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    flex-basis: 32%;
    height: 300px;
    border-radius: 10px;
    overflow: hidden;
    border: 1px solid #cecece;
    transition-property: transform;
    transition-duration: 100ms;
}

.master-settings-pics__item::after {
    position: absolute;
    content: '';
    width: 100%;
    height: 100%;
    background: #000;
    opacity: 0;
    visibility: hidden;
    transition-property: opacity, visibility;
    transition-duration: 100ms;
}

.master-settings-pics__item:hover::after {
    visibility: visible;
    opacity: 0.3;
}

.master-settings-pics__img {
    position: absolute;
    pointer-events: none;
    width: 100%;
    height: 100%;
    user-select: none;
    object-fit: cover;
}

.master-settings-pics__delete {
    z-index: 1;
    user-select: none;
    background: #FFFFFF;
    color: #2b2b2b;
    width: 140px;
    height: 36px;
    font-weight: 600;
    font-size: 12px;
    border-radius: 4px;
    border: none;
    position: absolute;
    opacity: 0;
    visibility: hidden;
    transition-property: opacity, visibility;
    transition-duration: 100ms;
}

.master-settings-pics__item:hover .master-settings-pics__delete {
    opacity: 1;
    visibility: visible;
}

.master-settings-pics__delete:hover {
    opacity: 0.9!important;
}

.master-settings-pics__item:active, .master-settings-pics__delete:active {
    transform: scale(0.95);
}

.master-settings-pics__form {
    margin-top: 20px;
}

.master-settings-pics__button {
    background: #d9573b;
    color: #ffffff;
    border: none;
    font-size: 18px;
    padding: 0 80px;
    border-radius: 10px;
    height: 55px;
    margin-top: 20px;
    transition: 150ms opacity;
}

.master-settings-pics__button:hover {
    opacity: 0.8;
}

.slider__content {
    margin-top: 120px;
}

@media (max-width: 1000px) {
    .slider__content {
        margin-top: 30px;
    }

    .slider__content h2 {
        font-size: 25px;
    }
}

.home-counters {
    margin-top: 90px;
    margin-bottom: 40px;
}

@media (max-width: 1000px) {
    .home-counters {
        margin-top: 30px;
        margin-bottom: 20px;
    }
}

.header-counters__dot, .header-counters__item {
    display: inline-block;
}

.header-counters__dot {
    width: 30px;
    height: 30px;
    border-radius: 15px;
    margin-right: 15px;
    background: #D93F3F;
}

.header-counters__item {
    vertical-align: top;
    font-size: 14px;
    max-width: 170px;
    line-height: 15px;
    margin-right: 30px;
}

.home-counters__button {
    color: #fff;
    display: inline-block;
    padding: 0 50px;
    margin-top: 30px;
    line-height: 40px;
    border-radius: 20px;
    font-size: 14px;
    background: #D93F3F;
}

.offer-master__bar {
    display: flex;
    padding: 0 50px;
    gap: 70px;
}

.number-of-offers {
    width: 25%;
    text-align: center;
}

li.dropdown {
    line-height: 70px;
}

.dropdown-content {
    display: none;
    top: 70px!important;
}

li.dropdown:hover > .dropdown-content {
    display: block;
}
.dropdown-content > .recent {
    line-height: 20px;
}

.yosetout {
    height: 70px;
}

.yosetout .bldropdown {
    display: none;
    top: -4px;
}

.dropdownuser_arrow-wrap {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: 5px;
}

.yosetout:hover .bldropdown {
    display: block;
}

.dropdownuser_arrow {
    transition: 0.3s;
}

.yosetout:hover .dropdownuser_arrow {
    rotate: -90deg;
}

.active-comment-button {
    background: #D9573B!important;
}

.feedback-reply-modal-content {
    width: 100%;
    max-width: 600px;
    background: #fff;
    padding: 30px;
    border-radius: 20px;
}

.feedback-reply-modal__title {
    font-size: 32px;
}
/* ... */

